mips 完成代码但为debug